--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,14 @@ services:
   db:
     image: postgres
     restart: always
+    ports:
+      - 5432:5432
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./../postgres-data:/var/lib/postgresql/data
 
   adminer:
     image: adminer
