add check-in & check-out endpoint * create request interface * set logged user in context * attendance db change ** convert to pointer to default null ** convert boolean default to null to support three status

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "datetime",
         "gonic",
         "gorm",
         "joho",
-        "jora"
+        "jora",
+        "oneof"
     ]
 }
