--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,15 +14,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.18'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build Go app
+      run: go build -o jora ./...
 
-    - name: Test
-      run: go test -v ./...
+    - name: Login to GitHub Container Registry
+      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
+
+    - name: Build and push Docker image
+      run: |
+        docker build -t docker.pkg.github.com/${{ github.repository }}/jora:latest .
+        docker push docker.pkg.github.com/${{ github.repository }}/jora:latest
+
+    - name: Cleanup
+      run: docker logout docker.pkg.github.com
