--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker buildx create --use
+        docker buildx -t ${{ github.repository_name }}:latest .
         docker buildx build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}:latest . --push
 
       env:
