fix: auto redirect to login

--- a/frontend/config/Dockerfile
+++ b/frontend/config/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.jajiga.com:5000/node:20-alpine AS deps
+FROM node:20-alpine AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
@@ -6,7 +6,7 @@ COPY package.json yarn.lock ./
 RUN yarn install  --forzen-lockfile --no-cache --production
 
 # Production image, copy all the files and run next
-FROM registry.jajiga.com:5000/node:20-alpine AS runner
+FROM node:20-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
