--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
   ],
   "routes": [
     {
-      "src": "/api/.*",
-      "dest": "/api/index"
+      "src": "/api/(.*)",
+      "dest": "/api/index/$1"
     },
     {
       "src": "/(.*)",
