--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.go",
+      "src": "main.go",
       "use": "@vercel/go"
     },
     {
@@ -13,8 +13,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/api/index.go"
+      "src": "api/(.*)",
+      "dest": "main.go"
     },
     {
       "src": "/fr",
