--- a/vercel.json
+++ b/vercel.json
@@ -14,10 +14,10 @@
   "routes": [
     {
       "src": "api/(.*)",
-      "dest": "api/index.go"
+      "dest": "api/$1"
     },
     {
-      "src": "/fr",
+      "src": "/(.*)",
       "dest": "/frontend/$1"
     }
   ],
