--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   "routes": [
     {
       "src": "api/(.*)",
-      "dest": "api"
+      "dest": "/api/index.go"
     },
     {
       "src": "/(.*)",
