--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "use": "@vercel/next"
     },
     {
-      "src": "main.go",
+      "src": "api/index.go",
       "use": "@vercel/go"
     }
   ],
@@ -17,7 +17,7 @@
       "dest": "/frontend/$1"
     },
     {
-      "src": "/api/(.*)",
+      "src": "/api/v1/(.*)",
       "dest": "/api/index.go"
     }
   ],
