--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/next"
+    },
+    {
+      "src": "./main.go",
+      "use": "@vercel/go",
+      "config": { "maxLambdaSize": "15mb" }
     }
   ],
   "routes": [
