--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -8,9 +5,9 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch:  # This allows manual triggering
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     permissions:
@@ -26,17 +23,21 @@ jobs:
         go-version: '1.18'
 
     - name: Build Go app
-      run: go build -v ./backend/...
+      run: go build -v
+      working-directory: backend/  # Set the working directory to /backend
 
     - name: Login to GitHub Container Registry
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
-      
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest .
+        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest backend/
         docker push ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
-      
-
       env:
         DOCKER_BUILDKIT: 1
+
+    - name: Deploy to Server
+      run: |
+        ssh user@your-server-ip 'bash -s' < deploy.sh
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
