--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,7 +46,7 @@ jobs:
         script: |
           #!/bin/bash
           docker pull ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
-          docker-compose -f /path/to/docker-compose.yml down
-          docker-compose -f /path/to/docker-compose.yml up -d
+          docker-compose down
+          docker-compose up -d
 
           
