--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,10 @@ jobs:
       run: go build -v
       working-directory: backend/  # Set the working directory to /backend
 
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Login to GitHub Container Registry
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
@@ -36,7 +40,10 @@ jobs:
       env:
         DOCKER_BUILDKIT: 1
 
-
+  deploy:
+    runs-on: ubuntu-latest
+    needs: push
+    steps:
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
       with:
@@ -48,5 +55,3 @@ jobs:
           docker pull ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
           docker-compose down
           docker-compose up -d
-
-          
