--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest backend/
+        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest -f Dockerfile .
         docker push ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
       env:
         DOCKER_BUILDKIT: 1
