--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,23 +26,19 @@ jobs:
       run: go build -v
       working-directory: backend/  # Set the working directory to /backend
 
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
     - name: Login to GitHub Container Registry
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest -f Dockerfile .
+        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest backend/
         docker push ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
       env:
         DOCKER_BUILDKIT: 1
 
   deploy:
     runs-on: ubuntu-latest
-    needs: push
+    needs: build
     steps:
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
