--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,5 +49,5 @@ jobs:
         script: |
           #!/bin/bash
           docker pull ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
-          docker-compose down
-          docker-compose up -d
+          docker-compose down api
+          docker-compose up -d api
