--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,6 +24,10 @@ jobs:
       run: yarn install
       working-directory: frontend/ 
 
+    - name: build front
+      run: yarn build
+      working-directory: frontend/ 
+
     - name: Build and push frontend Docker image
       run: |
         docker build --file frontend/config/Dockerfile -t ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}/frontend:latest frontend/
