--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -37,6 +37,7 @@ jobs:
         DOCKER_BUILDKIT: 1
 
   deploy:
+    if: contains(github.event.head_commit.message, 'backend')
     runs-on: ubuntu-latest
     needs: build
     steps:
