--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,8 +2,8 @@ name: Backend
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
+    paths:
+      - 'backend/**'
     branches: [ "master" ]
   workflow_dispatch:  # This allows manual triggering
 
